--- a/14_css/templates/index.html
+++ b/14_css/templates/index.html
@@ -18,17 +18,20 @@
     <h1>
         h1 foo
     </h1>
-    
-    <h3>
-      nav foo
-    </h3> 
+  
     
     <div id = "all-contents-foo">
-      <div id="nav-bar"
+      <div id="nav-bar">
+        <div id = "bar-title">
+          <h3>
+            nav foo
+          </h3> 
+        </div>
 
         <p>dis</p>
         <p>dat</p>
         <p>de udda ting</p>
+      
         
       </div>
       
