--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1,7 +1,7 @@
 body {
-  color: #000000;
+  color: black;
   padding: 15px 15px 0px 15px;
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: Helvetica, sans-serif;
   font-size: 18px;
 }
 
@@ -109,12 +109,6 @@ h3 {
   margin-bottom: 15px;
 }
 
-figcaption {
-  text-align: center;
-  font-size: 15px;
-  margin-bottom: 15px;
-}
-
 .memb {
   font-size: 22px;
   margin-bottom: 5px;
@@ -178,6 +172,4 @@ header {
 
 .chosen {
   color: #F01069;
-}
-
-/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
