--- a/sass/static/sass.css
+++ b/sass/static/sass.css
@@ -1,18 +1,51 @@
+.example {
+  color: red;
+  size: 500px;
+}
+
 body {
-  background-color: #c69;
   font: 100% Helvetica, sans-serif;
+}
+
+nav {
+  background-color: #c69;
+  color: #333;
+  width: auto;
+}
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #c69;
+  position: sticky;
+  top: 0;
+}
+nav li {
+  float: left;
+}
+nav li a {
+  display: block;
   color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+nav li a:hover {
+  background-color: teal;
+}
+nav .active {
+  background-color: #4CAF50;
 }
 
 #header {
-  background-color: white;
-  justify-content: center;
-  position: sticky;
-  margin-top: 0%;
-  margin: 0;
-  width: 100%;
-  max-height: 30%;
   padding: 20px;
+}
+#header img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 .uno button {
@@ -48,18 +81,69 @@ body {
   padding: 10px 24px;
 }
 
-nav ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+.container {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 0px;
 }
-nav li {
+
+img {
+  width: 75%;
+}
+
+switch {
+  position: relative;
   display: inline-block;
+  width: 60px;
+  height: 34px;
 }
-nav a {
-  display: block;
-  padding: 6px 12px;
-  text-decoration: none;
+switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input .slider :checked {
+  background-color: #2196F3;
+}
+input .slider :before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+input :focus {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+.slider.round ::before {
+  border-radius: 50%;
 }
 
 /*# sourceMappingURL=sass.css.map */
