--- a/sass/templates/sassy_lassie.html
+++ b/sass/templates/sassy_lassie.html
@@ -207,15 +207,15 @@
                     <input type="checkbox">
                     <span class="slider round"></span>
                 </label> -->
-            <h2>Extend</h2>
-                @extend allows selectors to inherit styles from one another.
-            <h2>At-Root</h2>
+            <h2>@EXTEND</h2>
+                <ul>Allows selectors to inherit styles from one another</ul>
+            <h2>@AT-ROOT</h2>
                 @at-root puts styles within it at the root of the CSS document.
-            <h2>Error</h2>
+            <h2>@ERROR</h2>
                 @error causes compilation to fail with an error message.
-            <h2>Warn</h2>
+            <h2>@WARN</h2>
                 @warn prints a warning without stopping compilation entirely.
-            <h2>Debug</h2>
+            <h2>@DEBUG</h2>
             @debug prints a message for debugging purposes.
             <h2>Flow Control</h2>
             Flow control rules like @if, @each, @for, and @while control whether or how many times styles are emitted.
