--- a/sass/templates/sassy_lassie.html
+++ b/sass/templates/sassy_lassie.html
@@ -13,10 +13,10 @@
             <ul>
                 <li><a class="active" href="#home">Home</a></li>
                 <li><a href="#Installation">Installation</a></li>
-                <li><a href="#Intro to Sass">Syntax</a></li>
+                <li><a href="#Intro to Sass">Intro to Sass</a></li>
                 <li><a href="#Nesting">Nesting</a></li>
                 <li><a href="#Interpolation">Interpolation</a></li>
-                <li><a href="#At Rules">At Rules</a></li>
+                <li><a href="#At Rules">At-Rules</a></li>
                 <li><a href="#Operators">Operators</a></li>
                 <li><a href="#Modules">Modules</a></li>
             </ul>
@@ -184,7 +184,7 @@
         </div> <!-- end interpolation -->
         
         <div>
-            <h1 id="At Rules">At Rules</h1>
+            <h1 id="At Rules">At-Rules</h1>
             <h2>@MIXIN</h2>
                 <ul>CSS Classes with similar styles?</ul>
                 <ul>Create one MIXIN class that can be mentioned in other classes!</ul>
