--- a/sass/templates/sassy_lassie.html
+++ b/sass/templates/sassy_lassie.html
@@ -201,7 +201,7 @@
                 <ul>Can be used prior to @use</ul>
                 <ul>"Forwards" mixins, functions, and variables from a stylesheet that are included in another stylesheet</ul>
             <h2>@FUNCTION</h2>
-                @function defines custom functions that can be used in SassScript expressions.
+                <ul>defines custom functions that can be used in SassScript expressions</ul>
                 <!-- Rounded switch -->
                 <!-- <label class="switch">
                     <input type="checkbox">
