--- a/sass/static/sass.css
+++ b/sass/static/sass.css
@@ -1,14 +1,39 @@
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@200;700&display=swap");
+.example {
+  color: rgb(3, 67, 3);
+  size: 500px;
+}
+
+html {
+  background-color: rgb(252, 220, 237);
+  color: #3c006d;
+}
+
 body {
-  font: 100% Helvetica, sans-serif;
-  /* @error "You messed up!" */
-  /* @warn "Don't mess it up!" */
+  font: 100% "Lexend", sans-serif;
+  /*@error "You messed up!";*/
+  /*@warn "Don't mess it up!";*/
+  padding: 60px;
+  margin: 0px;
+}
+
+span {
+  color: #c69;
+  font-weight: 700;
+}
+
+table {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 nav {
   background-color: #c69;
-  color: #333;
-  /* @debug "color is: #333"; */
+  color: #3c006d;
   width: auto;
+  margin: -60px;
+  position: sticky;
+  top: 0px;
 }
 nav ul {
   list-style-type: none;
@@ -18,9 +43,14 @@ nav ul {
   background-color: #c69;
   position: sticky;
   top: 0;
+  text-align: center;
+}
+nav div {
+  margin-right: auto;
+  margin-left: auto;
 }
 nav li {
-  float: left;
+  display: inline-block;
 }
 nav li a {
   display: block;
@@ -30,10 +60,14 @@ nav li a {
   text-decoration: none;
 }
 nav li a:hover {
-  background-color: teal;
+  background-color: rgb(87, 0, 179);
 }
 nav .active {
-  background-color: #4CAF50;
+  background-color: #ff7bde;
+}
+
+.tab4 {
+  tab-size: 8;
 }
 
 #header {
@@ -41,21 +75,20 @@ nav .active {
 }
 #header img {
   display: block;
+  margin-top: -57px;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  margin-bottom: 70px;
+  max-height: 150px;
+  height: auto;
+  width: auto;
 }
 
-.uno button {
-  background: rgb(185, 255, 255);
-  width: 25%;
-  display: inline;
-}
-
-.dos button {
-  background: rgb(185, 255, 255);
-  width: 25%;
-  display: inline;
+header {
+  background-color: #c69;
+  min-height: 30px;
+  margin-left: -60px;
+  margin-right: -60px;
 }
 
 .firstFlop button {
@@ -65,6 +98,18 @@ nav .active {
 }
 
 .secondFlop button {
+  background: rgb(185, 255, 255);
+  width: 25%;
+  display: inline;
+}
+
+.uno button {
+  background: rgb(185, 255, 255);
+  width: 25%;
+  display: inline;
+}
+
+.dos button {
   background: rgb(185, 255, 255);
   width: 25%;
   display: inline;
@@ -83,61 +128,6 @@ img {
   width: 50%;
 }
 
-switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-input .slider :checked {
-  background-color: #2196F3;
-}
-input .slider :before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-input :focus {
-  box-shadow: 0 0 1px #2196F3;
-}
-
-.slider.round {
-  border-radius: 34px;
-}
-.slider.round ::before {
-  border-radius: 50%;
-}
-
-/* Extends example */
 .message-main, .warning, .error, .success, .message {
   border: 1px solid #ccc;
   padding: 10px;
@@ -159,10 +149,34 @@ input :focus {
 /* @at-root example */
 foo {
   margin: 0px;
-  /* @at-root */
 }
-foo .column {
+.column {
   background-color: black;
+}
+
+.paragraph-1 {
+  font-size: 10px;
+  background-color: rgb(184, 226, 239);
+}
+
+.paragraph-2 {
+  font-size: 20px;
+  background-color: rgb(250, 202, 209);
+}
+
+.paragraph-3 {
+  font-size: 30px;
+  background-color: rgb(184, 226, 239);
+}
+
+.paragraph-4 {
+  font-size: 40px;
+  background-color: rgb(250, 202, 209);
+}
+
+.paragraph-5 {
+  font-size: 50px;
+  background-color: rgb(184, 226, 239);
 }
 
 /*# sourceMappingURL=sass.css.map */
